--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,307 @@
-/* место для вашего кода */
+body {
+  background: #f0ecec;
+}
+a, address {
+	font-size: 18px;
+	text-decoration: none;
+}
+
+.container {
+  max-width: 1100px;
+  width: 100%;
+  margin-inline: auto;
+  background: #fff;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  height: 293px;
+  justify-items: center;
+  align-items: center;
+}
+
+.header__menu {
+  text-transform: lowercase;
+}
+
+.header__links-list {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	gap: 26px;
+}
+
+.header__links-list-item {
+  list-style: circle;
+	
+}
+.header__link_active{
+	text-decoration: none;
+}
+.header__link {
+	text-decoration: underline;
+	text-underline-offset: 5px
+}
+
+.header__links-list-item_no-bullit {
+	list-style: none;
+}
+
+.header-logo {
+  width: 148px;
+  height: 105px;
+}
+
+.adress {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+	max-width: 240px;
+	gap: 5px;
+}
+
+.adress a {
+	text-decoration: underline;
+	text-underline-offset: 5px
+}
+
+.header__address {
+	text-decoration: none;
+}
+
+.cover {
+  background-image: url("/images/cover.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: 757px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.cover__title {
+  text-transform: uppercase;
+  font-size: 100px;
+  letter-spacing: 30px;
+  color: #fff;
+  z-index: 2;
+}
+
+.cover__title span {
+  position: absolute;
+}
+
+.aligned-text_left {
+  top: 165px;
+  left: 50px;
+}
+
+.aligned-text_center {
+  top: 300px;
+  left: 380px;
+}
+
+.aligned-text_right {
+  top: 435px;
+  right: 50px;
+}
+
+.cover__description {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+  padding: 50px 50px;
+  margin-top: auto;
+  z-index: 1;
+}
+.cover__description-text {
+  text-transform: uppercase;
+  line-height: 28px;
+  font-size: 22px;
+}
+
+.letter-spacing-extended {
+  word-spacing: 20px;
+}
+
+.bet-button {
+  width: 256px;
+  height: 51px;
+  background-color: transparent;
+  font-size: 22px;
+  color: #fff;
+  text-transform: uppercase;
+  border: 1px solid #fff;
+  font-weight: 500;
+  line-height: 100%;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  top: 0;
+  left: 0;
+  z-index: 0;
+}
+
+.lots {
+  margin-top: 180px;
+  padding: 0 24px;
+  align-items: center;
+}
+
+.lots__heading {
+  font-size: 40px;
+  text-transform: uppercase;
+  padding: 0 40px;
+  margin-bottom: 27px;
+}
+ul,
+li {
+  list-style: none;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
+  margin-bottom: 30px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: space-between;
+  width: 334px;
+  min-height: 576px;
+  color: #fff;
+	position: relative;
+	z-index: 1;
+}
+.card-link {
+  height: 100%;
+}
+.card-header {
+  text-transform: uppercase;
+  text-decoration: underline;
+  padding: 48px 40px;
+  font-size: 22px;
+	z-index: 2;
+}
+
+.card-text {
+  padding-left: 40px;
+	padding-right:40px;
+	padding-bottom: 40px;
+  line-height: 1.2;
+  font-size: 20px;
+	z-index: 3;
+}
+
+.card_type_film {
+  background-image: url("/images/card-lot-01.jpg");
+  background-position: center;
+  height: 100%;
+}
+
+.card_type_book {
+  background-image: url("/images/card-lot-02.jpg");
+  background-position: center;
+  height: 100%;
+}
+
+.card_type_picture {
+  background-image: url("/images/card-lot-03.jpg");
+  background-position: center;
+  height: 100%;
+}
+
+.lots__look-more-link {
+  margin-left: 40px;
+  text-transform: lowercase;
+  text-decoration: underline;
+	line-height: 1.5;
+  font-size: 20px;
+}
+
+.about {
+  height: 595px;
+  display: flex;
+  margin-top: 120px;
+	margin-bottom: 180px ;
+  padding: 0 24px;
+}
+.about__logo {
+  border-radius: 50%;
+  min-width: 240px;
+  height: 240px;
+  background: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 35px 47px;
+}
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+  margin: 35px 72px 47px;
+}
+
+.about__title {
+  margin: 133px 0 13px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  /* появился верхний отступ, как убрать */
+}
+
+.about__title-heading {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 100px;
+}
+.about__text {
+  flex-wrap: wrap;
+  font-size: 20px;
+  line-height: 24px;
+}
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 180px;
+  justify-items: center;
+  align-items: start;
+	
+}
+
+.footer__menu {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	line-height: 1.5;
+	text-decoration: underline;
+}
+
+
+.footer__social-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 240px;
+  height: 48px;
+}
+
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
