--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,10 @@
 body {
   background: #f0ecec;
 }
-a, address {
-	font-size: 18px;
-	text-decoration: none;
+a,
+address {
+  font-size: 18px;
+  text-decoration: none;
 }
 
 ul,
@@ -29,10 +30,10 @@ li {
 }
 
 .header__links-list {
-	display: flex;
-	justify-content: space-between;
-	gap: 26px;
-  justify-self: flex-start
+  display: flex;
+  justify-content: space-between;
+  gap: 26px;
+  justify-self: flex-start;
 }
 
 .header__links-list-item {
@@ -41,16 +42,16 @@ li {
 
 .header__link {
   text-transform: lowercase;
-	text-decoration: underline;
-	text-underline-offset: 5px
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
-.header__link_active{
-	text-decoration: none;
+.header__link_active {
+  text-decoration: none;
 }
 
 .header__links-list-item_no-bullit {
-	list-style: none;
+  list-style: none;
 }
 
 .header-logo {
@@ -61,13 +62,13 @@ li {
 .address {
   display: flex;
   flex-direction: column;
-  align-items: flex-start; 
-	gap: 5px;
+  align-items: flex-start;
+  gap: 5px;
 }
 
 .address a {
-	text-decoration: underline;
-	text-underline-offset: 5px
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
 .header__address {
@@ -182,8 +183,8 @@ li {
   width: 334px;
   min-height: 576px;
   color: #fff;
-	position: relative;
-	z-index: 1;
+  position: relative;
+  z-index: 1;
 }
 .card-link {
   height: 100%;
@@ -194,17 +195,17 @@ li {
   padding: 48px 40px;
   font-size: 22px;
   line-height: 1.2;
-	z-index: 1;
+  z-index: 1;
 }
 
 .card-text {
   padding-left: 40px;
-	padding-right:40px;
-	padding-bottom: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;
   line-height: 1.2;
   font-size: 20px;
   font-weight: 400;
-	z-index: 1;
+  z-index: 1;
 }
 
 .card_type_film {
@@ -229,14 +230,14 @@ li {
   margin-left: 40px;
   text-transform: lowercase;
   text-decoration: underline;
-	line-height: 1.5;
+  line-height: 1.5;
   font-size: 20px;
 }
 
 .about {
   display: flex;
   margin-top: 120px;
-	margin-bottom: 180px ;
+  margin-bottom: 180px;
   padding: 0 24px;
 }
 
@@ -257,7 +258,7 @@ li {
 }
 
 .about__summary {
-   margin-top: 133px;
+  margin-top: 133px;
 }
 
 .about__heading {
@@ -285,15 +286,14 @@ li {
 }
 
 .footer__menu {
-	text-align: center;
-	line-height: 1.5;
-	text-decoration: underline;
+  text-align: center;
+  line-height: 1.5;
+  text-decoration: underline;
 }
 
 .footer__addres {
   max-width: 260px;
 }
-
 
 .footer__social-list {
   display: flex;
@@ -302,7 +302,6 @@ li {
   width: 240px;
   justify-self: flex-end;
 }
-
 
 .footer__social-icon {
   width: 48px;
