--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-style: normal;
   unicode-bidi: normal;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -27,8 +28,19 @@ blockquote {
   padding: 0;
 }
 
-a {
+body {
+  background: #f0ecec;
+}
+a,
+address {
+  font-size: 18px;
+  text-decoration: none;
   color: inherit;
+}
+
+ul,
+li {
+  list-style: none;
 }
 
 img {
