--- a/styles/style.css
+++ b/styles/style.css
@@ -1,25 +1,10 @@
-* {
-  scroll-behavior: smooth;
-}
-body {
-  background: #f0ecec;
-}
-a,
-address {
-  font-size: 18px;
-  text-decoration: none;
-}
 
-ul,
-li {
-  list-style: none;
-}
 
 .container {
   max-width: 1100px;
   width: 100%;
   margin-inline: auto;
-  background: #fff;
+  background: #ffffff;
 }
 
 .header {
@@ -43,10 +28,10 @@ li {
 .header__link {
   text-transform: lowercase;
   text-decoration: underline;
-  text-underline-offset: 5px;
+  text-underline-offset: 4px;
 }
 
-.header__link_active {
+.link_active {
   text-decoration: none;
 }
 
@@ -60,20 +45,20 @@ li {
 }
 
 .address {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 5px;
+  line-height: 1.2;
+    
 }
 
 .address a {
   text-decoration: underline;
   text-underline-offset: 5px;
+  
 }
 
 .header__address {
   max-width: 240px;
   justify-self: flex-end;
+  
 }
 
 .cover {
@@ -85,42 +70,51 @@ li {
   min-height: 757px;
   position: relative;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
+  padding: 165px 50px 50px;
 }
 
-.cover__title {
+.cover__title  {
   text-transform: uppercase;
   font-size: 100px;
   letter-spacing: 30px;
   color: #fff;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.cover__title span {
-  position: absolute;
-}
 
 .aligned-text_left {
-  top: 165px;
-  left: 50px;
+  text-align: start;
+     display: block;
+  line-height: 1.15;
+}
+
+.letter-spacing {
+  letter-spacing: normal;
 }
 
 .aligned-text_center {
-  top: 300px;
-  left: 380px;
+  text-align: center;
+  display: block;
+  line-height: 1.15;
+  
 }
 
-.aligned-text_right {
-  top: 435px;
-  right: 50px;
+.aligned-text_right  {
+  text-align: end;
+   display: block;
+     line-height: 1.15;
 }
+
 
 .cover__description {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 50px;
-  margin-top: auto;
   z-index: 1;
 }
 
@@ -149,8 +143,7 @@ li {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  top: 0;
-  left: 0;
+  inset: 0; 
   z-index: 0;
 }
 
@@ -173,18 +166,22 @@ li {
   gap: 25px;
   margin-top: 27px;
   margin-bottom: 30px;
+  flex-wrap: wrap;
 }
+
 
 .card {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
   justify-content: space-between;
   width: 334px;
-  min-height: 576px;
+  min-height: 596px;
   color: #fff;
   position: relative;
   z-index: 1;
+  background-position: center;
+  height: 100%;
 }
 .card-link {
   height: 100%;
@@ -192,38 +189,32 @@ li {
 .card-header {
   text-transform: uppercase;
   text-decoration: underline;
-  padding: 48px 40px;
+  padding: 49px 39px 0px;
   font-size: 22px;
   line-height: 1.2;
   z-index: 1;
 }
 
 .card-text {
-  padding-left: 40px;
+  padding-left: 39px;
   padding-right: 40px;
-  padding-bottom: 40px;
+  padding-bottom: 46px;
   line-height: 1.2;
   font-size: 20px;
-  font-weight: 400;
   z-index: 1;
 }
 
 .card_type_film {
-  background-image: url("/images/card-lot-01.jpg");
-  background-position: center;
-  height: 100%;
+  background-image: url("../images/card-lot-01.jpg");
 }
 
 .card_type_book {
-  background-image: url("/images/card-lot-02.jpg");
-  background-position: center;
-  height: 100%;
+  background-image: url("../images/card-lot-02.jpg");
 }
 
 .card_type_picture {
-  background-image: url("/images/card-lot-03.jpg");
-  background-position: center;
-  height: 100%;
+  background-image: url("../images/card-lot-03.jpg");
+
 }
 
 .lots__look-more-link {
@@ -239,6 +230,7 @@ li {
   margin-top: 120px;
   margin-bottom: 180px;
   padding: 0 24px;
+  gap: 72px;
 }
 
 .about__logo {
@@ -249,7 +241,8 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 35px 47px;
+  margin-left: 47px;
+  margin-top: 35px;
 }
 
 .about__logo-image {
@@ -274,7 +267,11 @@ li {
 .about__text {
   flex-wrap: wrap;
   font-size: 20px;
-  line-height: 24px;
+  line-height: 1.2;
+  letter-spacing: 0;
+}
+.about__text_with-padding {
+  padding-right: 5px;
 }
 
 .footer {
@@ -285,15 +282,19 @@ li {
   padding: 0 50px;
 }
 
-.footer__menu {
-  text-align: center;
-  line-height: 1.5;
-  text-decoration: underline;
-}
-
 .footer__addres {
   max-width: 260px;
 }
+
+.footer__menu-list-item { 
+  text-transform: lowercase;
+  text-align: center;
+
+}
+.footer__link {
+  text-decoration: underline;
+}
+
 
 .footer__social-list {
   display: flex;
