--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,3 @@
-
-
 .container {
   max-width: 1100px;
   width: 100%;
@@ -46,19 +44,16 @@
 
 .address {
   line-height: 1.2;
-    
 }
 
 .address a {
   text-decoration: underline;
   text-underline-offset: 5px;
-  
 }
 
 .header__address {
   max-width: 240px;
   justify-self: flex-end;
-  
 }
 
 .cover {
@@ -75,7 +70,7 @@
   padding: 165px 50px 50px;
 }
 
-.cover__title  {
+.cover__title {
   text-transform: uppercase;
   font-size: 100px;
   letter-spacing: 30px;
@@ -86,10 +81,9 @@
   gap: 20px;
 }
 
-
 .aligned-text_left {
   text-align: start;
-     display: block;
+  display: block;
   line-height: 1.15;
 }
 
@@ -101,15 +95,13 @@
   text-align: center;
   display: block;
   line-height: 1.15;
-  
 }
 
-.aligned-text_right  {
+.aligned-text_right {
   text-align: end;
-   display: block;
-     line-height: 1.15;
+  display: block;
+  line-height: 1.15;
 }
-
 
 .cover__description {
   display: flex;
@@ -143,7 +135,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  inset: 0; 
+  inset: 0;
   z-index: 0;
 }
 
@@ -169,7 +161,6 @@
   flex-wrap: wrap;
 }
 
-
 .card {
   display: flex;
   flex-direction: column;
@@ -189,8 +180,8 @@
 .card-header {
   text-transform: uppercase;
   text-decoration: underline;
-  padding: 49px 39px 0px;
-  font-size: 22px;
+  padding: 49px 39px 0px;   /* подход pixel perfect */ 
+  font-size: 22px;    
   line-height: 1.2;
   z-index: 1;
 }
@@ -214,7 +205,6 @@
 
 .card_type_picture {
   background-image: url("../images/card-lot-03.jpg");
-
 }
 
 .lots__look-more-link {
@@ -286,15 +276,13 @@
   max-width: 260px;
 }
 
-.footer__menu-list-item { 
+.footer__menu-list-item {
   text-transform: lowercase;
   text-align: center;
-
 }
 .footer__link {
   text-decoration: underline;
 }
-
 
 .footer__social-list {
   display: flex;
