--- a/styles/style.css
+++ b/styles/style.css
@@ -8,33 +8,39 @@
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
-  align-items: center;
   padding: 92px 50px;
+}
+
+.header__menu {
+  padding-top: 41px;
 }
 
 .header__links-list {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 26px;
-  justify-self: flex-start;
+  justify-self: start;
 }
 
 .header__links-list-item {
   list-style: circle;
+  padding: 0 5px;
 }
 
 .header__link {
   text-transform: lowercase;
   text-decoration: underline;
-  text-underline-offset: 4px;
+  text-underline-offset: 3px;
 }
 
-.link_active {
+.link__active {
   text-decoration: none;
 }
 
 .header__links-list-item_no-bullit {
   list-style: none;
+  padding: 0;
 }
 
 .header-logo {
@@ -43,17 +49,18 @@
 }
 
 .address {
-  line-height: 1.2;
+  line-height: 24px;
 }
 
 .address a {
   text-decoration: underline;
-  text-underline-offset: 5px;
+  text-underline-offset: 4px;
 }
 
 .header__address {
   max-width: 240px;
   justify-self: flex-end;
+  margin-top: 4px;
 }
 
 .cover {
@@ -173,6 +180,7 @@
   z-index: 1;
   background-position: center;
   height: 100%;
+  background-size: cover;
 }
 .card-link {
   height: 100%;
@@ -180,8 +188,8 @@
 .card-header {
   text-transform: uppercase;
   text-decoration: underline;
-  padding: 49px 39px 0px;   /* подход pixel perfect */ 
-  font-size: 22px;    
+  padding: 49px 39px 0px; /* подход pixel perfect */
+  font-size: 22px;
   line-height: 1.2;
   z-index: 1;
 }
@@ -276,12 +284,19 @@
   max-width: 260px;
 }
 
+
 .footer__menu-list-item {
-  text-transform: lowercase;
   text-align: center;
+  
 }
+
 .footer__link {
+  text-transform: lowercase;
   text-decoration: underline;
+}
+
+.footer__link.link__active {
+  text-decoration: none;
 }
 
 .footer__social-list {
