--- a/styles/style.css
+++ b/styles/style.css
@@ -43,7 +43,7 @@
   padding: 0;
 }
 
-.header-logo {
+.header__logo {
   width: 148px;
   height: 105px;
 }
@@ -232,7 +232,7 @@
 }
 
 .about__logo {
-  border-radius: 50%;
+  border-radius: 53%;
   min-width: 240px;
   height: 240px;
   background: #000;
